# CenterIM

./: .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  ChangeLog.old  FAQ  Makefile.am  Makefile.func  Makefile.in  NEWS  POLICY  README  THANKS  TODO  acconfig.h  aclocal.m4  autogen.sh  centericq.1  centericq.motor  centericq.spec  centerim.1  centerim.motor  centerim.spec  common.c  conf.h  config.h.in  configure  configure.ac  configure.in  connwrap.c  connwrap.h  crypt.c  events.c  firedns.c  firedns.h  firetalk-int.h  firetalk.c  firetalk.h  http.c  irc.c  (+39 more)
connwrap/: Makefile.am  configure.ac  connwrap.c  connwrap.spec
contrib/: Makefile.am  colorscheme.green  colorscheme.schlich
contrib/spanish/: ChangeLog  FAQ  INSTALL  Makefile.am  README
firetalk/: Makefile.am  aim.c  configure.ac  firetalk-int.h  firetalk.c  firetalk.h  irc.c  irc.h  safestring.c  safestring.h  toc.c  toc.h
include/: Makefile.am  abstractui.h  cmenus.h  colorschemer.h  common.h  conf.h  conscommon.h  dialogbox.h  filemanager.h  fileselector.h  horizontalbar.h  kkfsys.h  kkiproc.h  linkedlist.h  screenarea.h  textbrowser.h  texteditor.h  textinputline.h  textwindow.h  treeview.h
kkconsui/: Makefile.am  configure.ac
kkconsui/include/: Makefile.am  abstractui.h  cmenus.h  conf.h  conscommon.h  fileselector.h  horizontalbar.h  screenarea.h  textbrowser.h  texteditor.h  textwindow.h  treeview.h
kkconsui/src/: Makefile.am  abstractui.cc  cmenus.cc  colorschemer.cc  conscommon.cc  dialogbox.cc  fileselector.cc  horizontalbar.cc  linkedlist.cc  screenarea.cc  textbrowser.cc  texteditor.cc  textwindow.cc  treeview.cc
kkstrtext/: Makefile.am  configure.ac  kkstrtext.cc
kksystr/: Makefile.am
kksystr/include/: Makefile.am  kkiproc.h
kksystr/src/: Makefile.am  kkfsys.cc  kkiproc.cc
libgadu/: Makefile.am  common.c  compat.h  configure.ac  configure.in  dcc.c  events.c  http.c  libgadu-config.h  libgadu.c  libgadu.h  libgadu.motor  pubdir50.c
libicq2000/: AUTHORS  ChangeLog  Client.h  ContactTree.h  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  configure.in  events.h  sigslot.h
libicq2000/libicq2000/: Client.h  Contact.h  ContactList.h  ContactTree.h  Makefile.am  Translator.h  constants.h  events.h  ref_ptr.h  sigslot.h  userinfoconstants.h  version.h
libicq2000/src/: Capabilities.cpp  Capabilities.h  Client.cpp  Contact.cpp  ContactList.cpp  ContactTree.cpp  DCCache.h  DirectClient.cpp  FTCache.h  FileTransferClient.cpp  FileTransferClient.h  ICBMCookie.cpp  ICBMCookie.h  ICBMCookieCache.h  ICQ.cpp  ICQ.h  Makefile.am  MessageHandler.cpp  MessageHandler.h  RateLimits.cpp  RateLimits.h  RequestIDCache.h  SMTPClient.cpp  SMTPClient.h  SNAC-BOS.cpp  SNAC-BOS.h  SNAC-GEN.cpp  SNAC-GEN.h  SNAC-LOC.cpp  SNAC-LOC.h  SNAC-MSG.cpp  SNAC-MSG.h  SNAC-SBL.cpp  SNAC-SBL.h  SNAC-SRV.h  SNAC-UIN.cpp  SNAC-base.cpp  SNAC-base.h  SNAC.cpp  SNAC.h  (+14 more)
libjabber/: Makefile.am  configure.ac  jabber.h  jconn.c  jutil.c  xmltok_impl_c.h  xstream.c
libmsn/: Makefile.am  Makefile.func  Makefile.in  aclocal.m4  configure.ac  libmsn.motor
libmsn/msn/: Makefile.am  Makefile.in  authdata.cpp  authdata.h  connection.cpp  connection.h  errorcodes.h  externals.h  filetransfer.cpp  filetransfer.h  invitation.cpp  invitation.h  md5.h  message.cpp  message.h  msntest.cpp  notificationserver.cpp  notificationserver.h  passport.h  sstream_fix.h  switchboardserver.cpp  switchboardserver.h  util.cpp
libyahoo2/: Makefile.am  configure.in  libyahoo2.c  sha.c  sha.h  yahoo2.h  yahoo2_callbacks.h  yahoo2_types.h  yahoo_auth.c  yahoo_httplib.c  yahoo_util.h
m4/: .gitignore  ax_with_curses.m4  gpgme.m4
misc/: CenterIMLog2HTML.py  Makefile.am  cicqconv  cicqconv.1  cicqsync  cicqsync.1  cimconv  cimconv.1  cimextracthistory.pl  cimformathistory  external  git-version-gen
msn/: Makefile.am  Makefile.in  authdata.h  buddy.cpp  buddy.h  connection.cpp  connection.h  errorcodes.h  externals.h  filetransfer.cpp  filetransfer.h  invitation.h  message.cpp  message.h  msn.h  notificationserver.cpp  notificationserver.h  passport.cpp  passport.h  switchboardserver.cpp  switchboardserver.h  util.cpp  util.h
po/: .gitignore  ChangeLog  Makefile.am  Makevars  POTFILES.in  bg.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ms.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sv.po  uk.po  zh_CN.gb2312.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
share/: Makefile.am  SOUNDS
src/: Capabilities.cpp  Capabilities.h  Client.cpp  DirectClient.cpp  DirectClient.h  Makefile.am  Makefile.in  MessageHandler.cpp  SMTPClient.h  SNAC-BUD.cpp  SNAC-BUD.h  SNAC-GEN.cpp  SNAC-MSG.cpp  SNAC-SBL.cpp  SNAC-SBL.h  SNAC-SRV.cpp  SNAC-UIN.h  SNAC.cpp  TLV.cpp  Translator.cpp  UserInfoBlock.cpp  Xml.h  abstacthook.cc  abstracthook.h  abstractui.cc  accountmanager.cc  accountmanager.h  captcha.cc  captcha.h  centericq.cc  centericq.h  centerim.cc  centerim.h  centermain.cc  cmenus.cc  common.cc  conscommon.cc  contactinfo.cc  contactinfo.h  dialogbox.cc  (+55 more)
src/hooks/: HTTPClient.cc  HTTPClient.h  Makefile.am  abstracthook.cc  abstracthook.h  aimhook.cc  aimhook.h  gaduhook.cc  gaduhook.h  hooks_md5.cc  hooks_md5.h  icqhook.cc  icqhook.h  irchook.cc  irchook.h  jabberhook.cc  jabberhook.h  ljhook.cc  ljhook.h  msnhook.cc  msnhook.h  rsshook.cc  rsshook.h  yahoohook.cc  yahoohook.h
src/icq/: Makefile.am  Makefile.in  icqhook.cc  icqhook.h
src/yahoo/: Makefile.am  yahoohook.cc  yahoohook.h
test/: Makefile.am  kkstrtest  kkstrtest.cc
