AC_INIT(aclocal.m4)
AM_INIT_AUTOMAKE(libmsn, 0.1)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([curl], [curl_easy_init], , [AC_ERROR([curl not found])])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([gethostbyname gethostname getpass inet_ntoa memset select socket strerror strtol])

AC_OUTPUT(Makefile msn/Makefile)
